# AgentDemo

./: .env  .gitignore  README.md  main.py  pyproject.toml
models/catboost_models/: analysis_report.txt  best_params.txt  catboost_water_quality.cbm  feature_importance.csv  results.txt
scripts/data_processing/: build_vector_db.py  document_processor.py
scripts/model_training/: model_analysis.py  train_catboost.py
src/agent/: core.py  llm_manager.py  tool_manager.py
src/tools/: __init__.py  code_executor.py  vector_search.py  water_predictor.py
src/utils/: __init__.py  logger.py
