[project]
name = "agentdemo"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "chromadb>=1.0.21",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=0.3.11",
    "matplotlib>=3.10.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "shap>=0.48.0",
]
